# cookie

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  cookiecutter.json  copier.yml  noxfile.py
.github/workflows/: bump.yml  ci.yml  reusable-change-detection.yml  reusable-cookie.yml
docs/pages/guides/: coverage.md  gha_basic.md  gha_pure.md  gha_wheels.md  packaging_classic.md  packaging_compiled.md  packaging_simple.md  style.md  tasks.md
helpers/: extensions.py
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/: CONTRIBUTING.md
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  {% if cookiecutter.__type=='compiled' %}cd.yml{% endif %}
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.__project_slug}}/: __init__.py
{{cookiecutter.project_name}}/template/: CMakeLists.txt  Cargo.toml
{{cookiecutter.project_name}}/template/include/: add.hpp
{{cookiecutter.project_name}}/template/src/: CMakeLists.txt  add.cpp
{{cookiecutter.project_name}}/template/src/python/: CMakeLists.txt  module.cpp
{{cookiecutter.project_name}}/template/test/: CMakeLists.txt  test_add.cpp  test_compiled.py  test_package.py
